<resources>
    <string name="app_name">FoodOnline</string>
    <string name="restaurant_name">Đồng Quê Food</string>
    <string name="user_name">Tài khoản</string>
    <string name="pass_word">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_sign_up">Đăng ký</string>

    <string name="menu_home">Home</string>
    <string name="menu_invoice">Hóa đơn</string>
    <string name="menu_reservations">Đặt bàn</string>
    <string name="menu_infomation">Thông tin</string>
    <string name="name_dish">Tên món ăn</string>
    <string name="price">Giá</string>
    <string name="order">order</string>
    <string name="btn_oder_bill">Đặt hàng</string>

    <string name="tv_update">Sửa</string>
    <string name="tv_signout">Đăng xuất</string>
    <string name="lv_dsthongtin">Danh sách thông tin</string>

    <string name="transport_fee">Phí vận chuyển</string>
    <string name="total_price">Tổng tiền</string>

    <string name="tv_name">Họ và tên</string>
    <string name="tv_adress">Địa chỉ</string>
    <string name="tv_confirm_passwork">Xác nhận mật khẩu</string>
    <string name="tv_email">Email</string>
    <string name="tv_sdt">Số điện thoại</string>
    <string name="btn_cancel">Hủy</string>


    <string name="btn_cook_done">Nấu xong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_name_combo">Tên combo</string>
    <string name="tv_oder_table">Chọn bàn</string>
    <string name="text_oder">Quý khách có thể chọn bàn nếu có nhu cầu dùng tại nhà hàng</string>
    <string name="tv_reselect_table">Đổi bàn</string>
    <string name="tv_list_table">Danh sách bàn</string>
    <string name="tv_history">Lịch sử đặt hàng</string>
    <string name="tv_notification">Thông báo</string>
    <string name="toatsExit">Nhấn lần nữa để thoát</string>
    <string name="wrong_login">Sai tài khoản hoặc mật khẩu</string>
    <string name="alert_logout">Bạn có muốn đăng xuất không</string>
    <string name="check_password">Kiểm tra lại mật khẩu</string>
    <string name="check_input_text">Nhập thiếu thông tin</string>

    <string name="btn_exit">Thoát</string>
    <string name="btn_reset_pass">Đổi mật khẩu</string>
    <string name="tv_day">Ngày đặt</string>
    <string name="tv_date">Ngày</string>
    <string name="tv_time">Giờ</string>
    <string name="tv_name_tale">Tên bàn</string>
    <string name="tv_total_people">Số người</string>


    <string name="tv_delete">Xóa</string>
    <string-array name="select_history">
        <item>Lịch sử đặt món</item>
        <item>Lịch sử đặt bàn</item>
    </string-array>
    <string name="ca_1">Ca 1</string>
    <string name="ca_2">Ca 2</string>
    <string name="ca_3">Ca 3</string>
    <string name="select_picture">Chọn ảnh món ăn</string>
    <string name="title_activity_home_censor">HomeCensor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>