<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name_table"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name_tale" />
        <TextView
            android:id="@+id/total_people"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_people" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/tv_name" />
        <EditText
            android:id="@+id/edt_Name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/tv_sdt" />
        <EditText
            android:id="@+id/edt_PhoneNumber"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/tv_adress" />
        <EditText
            android:id="@+id/edt_adress"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/tv_day" />
        <EditText
            android:id="@+id/edt_bokking_day"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/tv_time" />
        <EditText
            android:id="@+id/edt_time_booking"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:imeOptions="actionDone"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>