<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:id="@+id/name_combo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:text="@string/tv_name_combo" />

    <TextView
        android:id="@+id/price_combo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price" />
</LinearLayout>

    <ListView
        android:id="@+id/lv_list_dish_combo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"/>
    <Button
        android:layout_margin="5dp"
        android:id="@+id/btn_oder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textAllCaps="false"
        android:gravity="center"
        android:text="@string/order" />
</LinearLayout>