<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/tv_day"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Thứ 2"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TableRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">


        <CheckBox
            android:id="@+id/rd_shift_1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:paddingLeft="10dp"
            android:text="@string/ca_1"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <CheckBox
            android:id="@+id/rd_shift_2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:paddingLeft="10dp"
            android:text="@string/ca_2"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <CheckBox
            android:id="@+id/rd_shift_3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical|left"
            android:paddingLeft="10dp"
            android:text="@string/ca_3"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </TableRow>
</LinearLayout>